auto-test/tests/chapter_18/invalid_types/tag_resolution/conflicting_fun_ret_types.c
struct s;


struct s foo(void);

int main(void) {
    struct s;  

    
    
    
    struct s foo(void);
    return 0;
}